[package]
name        = "ws-latency-monitor"
version     = "1.0.0"
edition     = "2021"
description = "Real-time WebSocket latency monitor — Binance · Coinbase · Polymarket"
authors     = ["ws-latency-monitor"]

[dependencies]
# Async runtime
tokio            = { version = "1",    features = ["full"] }
# WebSocket client with TLS
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util     = "0.3"
# URL parsing
url              = "2"
# JSON
serde_json       = "1"
# Timestamps
chrono           = "0.4"
# CLI + env-var config
# تفعيل "env" يحل مشكلة اللون الأحمر في الصورة الأخيرة
clap             = { version = "4", features = ["derive", "env"] }
# Coloured terminal output
colored          = "2"
# Error handling
anyhow           = "1"
# Structured logging
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
opt-level       = 2
lto             = false   # ضروري جداً لنجاح البناء في Railway
codegen-units   = 16      # يقلل الضغط على الرام أثناء البناء
panic           = "abort"
strip           = true
